--- a/catalog.html
+++ b/catalog.html
@@ -7,15 +7,12 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-
-    <!-- ХЕДЕР -->
+    <!-- Хедер -->
     <header class="page-header">
-
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
         <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
-
       <!-- Главное меню -->
       <nav class="main-navigation">
         <ul class="navigation-list">
@@ -35,7 +32,6 @@
             </a>
           </li>
         </ul>
-
         <!-- Пользовательское меню -->
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
@@ -61,18 +57,13 @@
           </li>
         </ul>
       </nav>
-
     </header>
-
-    <!-- СОДЕРЖИМОЕ СТРАНИЦЫ -->
+    <!-- Содержимое страницы -->
     <main class="main-container main-catalog">
-
       <div class="catalog-container">
-
         <!-- Хедер каталога -->
         <header class="catalog-header">
           <h1 class="catalog-header-title">Гостиницы Седоны</h1>
-
           <!-- Хлебные крошки -->
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
@@ -89,14 +80,11 @@
               </a>
             </li>
           </ul>
-
         </header>
-
         <!-- Фильтры -->
         <section class="catalog-filter">
           <h2 class="visually-hidden">Фильтры для сортировки гостиниц по выбранным критериям</h2>
           <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
-
             <!-- Чекбоксы -->
             <fieldset class="filter-group">
               <legend class="filter-title">
@@ -135,7 +123,6 @@
                 </li>
               </ul>
             </fieldset>
-
             <!-- Радиокнопки -->
             <fieldset class="filter-group">
               <legend class="filter-title">
@@ -174,7 +161,6 @@
                 </li>
               </ul>
             </fieldset>
-
             <!-- Слайдер с ценой -->
             <fieldset class="filter-price">
               <legend class="filter-title">
@@ -218,24 +204,18 @@
                 Сбросить
               </button>
             </div>
-
           </form>
         </section>
-
       </div>
-
       <!-- Результаты поиска -->
       <section class="catalog-content">
         <h2 class="visually-hidden">Список гостиниц по выбранным критериям</h2>
-
         <!-- Сортировка товаров -->
         <section class="catalog-sorting">
           <h3 class="visually-hidden">Сортировка гостиниц</h3>
           <p class="search-result">Найдено гостиниц: 38</p>
-
           <!-- Обёртка -->
           <div class="sorting-wrapper">
-
             <!-- Форма сортировки -->
             <div class="sorting-form">
               <label class="visually-hidden" for="sorting">
@@ -253,7 +233,6 @@
                 </option>
               </select>
             </div>
-
             <!-- Значки сортировки -->
             <div class="view">
               <a href="#" class="view-button view-button-current view-table">
@@ -272,20 +251,15 @@
                 </span>
               </a>
             </div>
-
           </div>
-
         </section>
-
         <!-- Каталог гостиниц -->
         <section class="catalog-hotels">
           <h3 class="visually-hidden">
             Найденные гостиницы
           </h3>
-
           <!-- Список карточек гостиниц -->
           <ol class="hotels-list">
-
             <!-- 1 гостиница -->
             <li class="hotels-item">
               <div class="hotels-card">
@@ -317,7 +291,6 @@
                 </span>
               </div>
             </li>
-
             <!-- 2 гостиница -->
             <li class="hotels-item">
               <div class="hotels-card">
@@ -349,7 +322,6 @@
                 </span>
               </div>
             </li>
-
             <!-- 3 гостиница -->
             <li class="hotels-item">
               <div class="hotels-card">
@@ -381,7 +353,6 @@
                 </span>
               </div>
             </li>
-
             <!-- 4 гостиница -->
             <li class="hotels-item">
               <div class="hotels-card">
@@ -413,9 +384,7 @@
                 </span>
               </div>
             </li>
-
           </ol>
-
           <!-- Пагинация -->
           <ol class="pagination-list">
             <li class="pagination-item">
@@ -450,9 +419,7 @@
             </li>
           </ol>
         </section>
-
       </section>
-
       <!-- Подписка -->
       <section class="subscribe">
         <h2 class="subscribe-title heading">
@@ -471,15 +438,12 @@
           </button>
         </form>
       </section>
-
     </main>
-
-    <!-- ФУТЕР -->
+    <!-- Футер -->
     <footer class="page-footer">
       <h2 class="visually-hidden">
         Контакты
       </h2>
-
       <!-- Ссылки на социальные сети -->
       <ul class="social-list">
         <li class="social-item">
@@ -507,14 +471,12 @@
           </a>
         </li>
       </ul>
-
       <!-- Телефон -->
       <address class="footer-address">
         <a class="footer-phone" href="tel:+78128121212">
           +7 (812) 812-12-12
         </a>
       </address>
-
       <!-- Баннер HTML Academy -->
       <a class="htmlacademy-link" href="https://htmlacademy.ru/">
         <svg aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)" fill="currentColor"><path d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 .36h115v33H0z"/></clipPath></defs></svg>
@@ -522,9 +484,7 @@
           HTML Academy
         </span>
       </a>
-
     </footer>
-
     <!-- Модальное окно -->
     <div class="modal-container modal-hidden">
       <div class="modal">
@@ -534,16 +494,13 @@
             Закрыть
           </span>
         </button>
-
         <!-- Содержимое модального окна -->
         <section class="modal-content">
           <h2 class="modal-title heading">
             Поиск гостиницы в Седоне
           </h2>
-
           <!-- Форма модального окна -->
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
-
             <!-- Дата -->
             <fieldset class="modal-group date">
               <div class="date-container">
@@ -575,10 +532,8 @@
                 </p>
               </div>
             </fieldset>
-
             <!-- Количество гостей -->
             <fieldset class="modal-group guests">
-
               <!-- Взрослые -->
               <div class="guests-container">
                 <label class="modal-label guests-label" for="adults">
@@ -594,14 +549,12 @@
                   <span class="visually-hidden">Больше гостей</span>
                 </button>
               </div>
-
               <!-- Дети (с тултипом) -->
               <div class="guests-container">
                 <div class="tooltip-container">
                   <label class="modal-label guests-label guests-label-children" for="children">
                     Дети:
                   </label>
-
                   <!-- Тултип-->
                   <span class="tooltip">
                     <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
@@ -610,7 +563,6 @@
                       Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
                     </span>
                   </span>
-
                   <button class="guests-button guests-less" type="button">
                     <svg class="guests-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v2h14V9H3Z"/></svg>
                     <span class="visually-hidden">Меньше гостей</span>
@@ -622,18 +574,14 @@
                   </button>
                 </div>
               </div>
-
             </fieldset>
-
             <!-- Кнопка модального окна -->
             <button class="modal-button button" type="submit">
               Найти
             </button>
-
           </form>
         </section>
       </div>
     </div>
-
   </body>
 </html>
